apps/goatlint/src/snapshots/fixtures__cli__invalid_config_complex_enum_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_complex_enum
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `react/jsx-fragments`:
  |   data did not match any variant of untagged enum JsxFragments
  |   received config: `"somethingelse"`

----------
CLI result: InvalidOptionConfig
----------
