apps/goatlint/src/snapshots/fixtures__cli__invalid_config_enum_@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_enum
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `no-return-assign`:
  |   unknown variant `foobar`, expected `always` or `except-parens`
  |   received config: `"foobar"`

----------
CLI result: InvalidOptionConfig
----------
