apps/goatlint/src/snapshots/fixtures__cli__invalid_config_extra_options_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_extra_options
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `jest/no-hooks`:
  |   unknown field `foo`, expected `allow`
  |   received config: `{ "foo": "bar" }`

----------
CLI result: InvalidOptionConfig
----------
