apps/goatlint/src/snapshots/fixtures__cli__invalid_config_in_override_@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_in_override
----------
Failed to build configuration.

  x Invalid configuration for rule `jest/no-hooks`:
  |   invalid type: boolean `true`, expected a string
  |   received config: `{ "allow": [ true, false ] }`

----------
CLI result: InvalidOptionConfig
----------
