apps/goatlint/src/snapshots/fixtures__cli__invalid_config_rules_without_config_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_rules_without_config
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `no-debugger`:
  |   This rule does not accept configuration options.

----------
CLI result: InvalidOptionConfig
----------
