apps/goatlint/src/snapshots/fixtures__cli__invalid_config_sort_imports_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/invalid_config_sort_imports
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `sort-imports`:
  |   memberSyntaxSortOrder must contain exactly 4 kinds, got 3
  |   received config: `{ "memberSyntaxSortOrder": [ "none", "all", "multiple" ] }`

----------
CLI result: InvalidOptionConfig
----------
